--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ footer{
 @media(max-width:768px){
     .title{
         text-align: center;
+         padding-left: 12px;
     }
     .heading h1{
         font-size: 2.2rem;
@@ -103,6 +104,7 @@ footer{
     }
     .title{
         text-align: center;
+        padding-left: 12px;
     }
     .heading h1{
         font-size: 2.2rem;
