--- a/style.css
+++ b/style.css
@@ -129,10 +129,42 @@ footer{
 }
 
 /*About.html*/
-
-.about h1{
+.about{
+    margin-top: 5%;
+}
+.about-me h1{
     color:#421b38;
     font-weight: 700;
     font-size: 3rem;
 }
+
+.about-img{
+    width: 30%;
+    border-radius: 1rem;
+}
+
+.para{
+    font-family: 'Spartan', sans-serif;
+    color:#421b38;
+}
+
+@media(max-width:768px){
+    .para{
+        margin-top: 5%;
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+@media(max-width:540px){
+    .para{
+        margin-top: 5%;
+        text-align: center;
+    }
+    footer{
+        font-size: 12px;
+    }
+}
+
+
 
