--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ footer{
     .para{
         margin-top: 5%;
         text-align: center;
+        font-size: 14px;
     }
     footer{
         font-size: 12px;
