--- a/style.css
+++ b/style.css
@@ -88,12 +88,6 @@ footer{
         text-align: center;
         padding-left: 12px;
     }
-    .heading h1{
-        font-size: 2.2rem;
-    }
-    .heading h3{
-        font-size: 1.2rem;
-    }
     .introduction{
         margin-top: 5%;
         z-index: -1;
@@ -147,6 +141,44 @@ footer{
     color:#421b38;
 }
 
+.skills{
+    margin-top: 5%;
+}
+
+.skills h1{
+    color:#421b38;
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.skills-content{
+    margin-top: 3%;
+    margin-bottom:3% ;
+}
+
+.skills img{
+    width:60%;
+}
+
+.skill-button{
+    margin-top: 3%;
+    height: 40px;
+    width: 20%;
+    background-image: linear-gradient(to right, #7f5f8e, #421b38 );
+    border:none;
+    border-radius: 4rem;
+}
+.skill-button:hover{
+    background-image: linear-gradient(to right,#eccdd9, #bb83a7 );
+}
+.skill-button a{
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+}
+.skill-button a:hover{
+    color:#eccdd9;
+}
+
 @media(max-width:768px){
     .para{
         margin-top: 5%;
@@ -156,7 +188,7 @@ footer{
 }
 
 @media(max-width:540px){
-    .about-me h1{
+    .about-me h1,.skills h1{
         font-size: 2.2rem;
     }
     .para{
@@ -166,6 +198,9 @@ footer{
     }
     footer{
         font-size: 12px;
+    }
+    .skill-button{
+        width: 30%;
     }
 }
 
