--- a/style.css
+++ b/style.css
@@ -303,5 +303,82 @@ footer{
     }
 }
 
+/* Services section*/
+
+#what-we-do .card{
+	padding: 1rem!important;
+	border: none;
+	margin-bottom:1rem;
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+
+#what-we-do .card-title{
+    color:#421b38 ;
+}
+
+#what-we-do .card-text{
+    font-family: 'Spartan', sans-serif;
+}
+
+#what-we-do .card:hover{
+	-webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+	-moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+	box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+#what-we-do .card .card-block{
+	padding-left: 50px;
+    position: relative;
+}
+#what-we-do .card .card-block a{
+	color: #421b38 !important;
+	font-weight:700;
+	text-decoration:none;
+}
+#what-we-do .card .card-block a i{
+	display:none;
+	
+}
+#what-we-do .card:hover .card-block a i{
+	display:inline-block;
+	font-weight:700;
+	
+}
+#what-we-do .card .card-block:before{
+	font-family: FontAwesome;
+    position: absolute;
+    font-size: 39px;
+    color:#bb83a7;
+    left: 0;
+	-webkit-transition: -webkit-transform .2s ease-in-out;
+    transition:transform .2s ease-in-out;
+}
+#what-we-do .card .block-1:before{
+    content: "\f1c9";
+}
+#what-we-do .card .block-2:before{
+    content: "\f1fc";
+}
+#what-we-do .card .block-3:before{
+    content: "\f641";
+}
+#what-we-do .card .block-4:before{
+    content: "\f083";
+}
+#what-we-do .card .block-5:before{
+    content: "\f303";
+}
+#what-we-do .card .block-6:before{
+    content: "\f121";
+}
+#what-we-do .card:hover .card-block:before{
+	-webkit-transform: rotate(360deg);
+	transform: rotate(360deg);	
+	-webkit-transition: .5s all ease;
+	-moz-transition: .5s all ease;
+	transition: .5s all ease;
+}
+
 
 
