--- a/style.css
+++ b/style.css
@@ -380,5 +380,10 @@ footer{
 	transition: .5s all ease;
 }
 
-
+@media(max-width:540px){
+    #what-we-do .card{
+        border-left: 3px solid #eccdd9;
+        border-top: 3px solid #eccdd9;
+    }
+}
 
