--- a/style.css
+++ b/style.css
@@ -387,3 +387,53 @@ footer{
     }
 }
 
+
+/*scroll to top button*/
+
+.btnScrollToTop{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #eccdd9;
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+	-moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    color: #421b38;
+    outline: none;
+    padding-top: 0.9%;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+}
+
+.btnScrollToTop i{
+    color:#421b38 ;
+}
+
+.show {
+    visibility: visible;
+    opacity: 1;
+  }
+   
+  .hide {
+    visibility: hidden;
+    opacity: 0;
+  }
+  .btnScrollToTop:active{
+      color: #421b38 ;
+  }
+  @media(max-width:768px){
+    .btnScrollToTop{
+        padding-top:1.5%;
+    }
+  }
+
+  @media(max-width:540px){
+    .btnScrollToTop{
+        padding-top: 3%;
+    }
+  }
+
