--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ footer{
 	font-family: FontAwesome;
     position: absolute;
     font-size: 39px;
-    color:#bb83a7;
+    color:#ca4da0;
     left: 0;
 	-webkit-transition: -webkit-transform .2s ease-in-out;
     transition:transform .2s ease-in-out;
