--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
     border:none;
     border-radius: 4rem;
 }
-.button:hover{
+.button:hover,.small-button:hover{
     background-image: linear-gradient(to right,#421b38, #7f5f8e );
 }
 .button a{
@@ -600,4 +600,18 @@ h2{
     .club h2{
         margin-top: 10px;
     }
+}
+
+.small-button{
+    margin-top: 3%;
+    height: 40px;
+    width: 20%;
+    background-image: linear-gradient(to right, #7f5f8e, #421b38 );
+    border:none;
+    border-radius: 4rem;
+}
+.small-button a{
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+    font-size: 0.9rem;
 }
